syntax = "proto3";

package models ;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.example.generated";



message GuessRequest{
    int32 guess =1 ;
}

enum Result{
    CORRECT = 0;
    LOW = 1 ;
    HIGH = 2 ;
}

message GuessResponse{
    int32 attempt = 1;
    Result result = 2;
}

service GuessNumber{
    rpc MakeGuess(stream GuessRequest) returns  (stream GuessResponse) ;
}